welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:9: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estFaceMur){
  ^